# driftwood

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  perf.yml
docs/: CI.md  DESIGN.md
docs/brainstorms/: 2026-06-07-chess-engine-requirements.md
include/driftwood/: board.hpp  book.hpp  eval.hpp  movegen.hpp  perft.hpp  search.hpp  serve.hpp  syzygy.hpp  tt.hpp  types.hpp  uci.hpp
src/: board.cpp  book.cpp  eval.cpp  main.cpp  movegen.cpp  perft.cpp  search.cpp  serve.cpp  syzygy.cpp  tt.cpp  types.cpp  uci.cpp
tests/: CMakeLists.txt  engine_test.cpp  perft_test.cpp
web/: app.js  index.html  style.css
